# djangoProject_Wargaming

./: .env  .gitignore  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
djangoProject_Wargaming/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
media/: file_1630592018.385363.txt  test.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
table/: forms.py  models.py  urls.py  views.py
table/migrations/: 0001_initial.py  0002_table_city.py  0003_auto_20210902_1346.py
table/templates/table/: file_info.html  index.html
