[tool.poetry]
name = "djangoproject_wargaming"
version = "0.1.0"
description = ""
authors = ["nankuF <fireloki87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
Pillow = "^8.3.2"
django-environ = "^0.5.0"
docker-compose = "^1.29.2"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
